修改启动参数,建立对象池