@@ -9,14 +9,18 @@ echo ETCD_URL = $ETCD_URL
 if [[ "$1" == "consumer" ]]; then
   echo "Starting consumer agent..."
   java -jar \
-       -Xms1536M \
-       -Xmx1536M \
+       -Xms1560M \
+       -Xmx1560M \
        -Dtype=consumer \
        -Dserver.port=20000 \
        -Detcd.url=$ETCD_URL \
        -Dlogs.dir=/root/logs \
        -Xloggc:/root/logs/gc.log \
+       -XX:+PrintGCDateStamps \
        -XX:+PrintGCDetails \
+       -XX:+PrintTenuringDistribution \
+       -XX:NewRatio=2 \
+       -XX:SurvivorRatio=8 \
        /root/dists/mesh-agent.jar
 elif [[ "$1" == "provider-small" ]]; then
   echo "Starting small provider agent..."
@@ -29,7 +33,11 @@ elif [[ "$1" == "provider-small" ]]; then
        -Detcd.url=$ETCD_URL \
        -Dlogs.dir=/root/logs \
        -Xloggc:/root/logs/gc.log \
+       -XX:+PrintGCDateStamps \
        -XX:+PrintGCDetails \
+       -XX:+PrintTenuringDistribution \
+       -XX:NewRatio=2 \
+       -XX:SurvivorRatio=8 \
        /root/dists/mesh-agent.jar
 elif [[ "$1" == "provider-medium" ]]; then
   echo "Starting medium provider agent..."
@@ -42,7 +50,11 @@ elif [[ "$1" == "provider-medium" ]]; then
        -Detcd.url=$ETCD_URL \
        -XX:+PrintGCDetails \
        -Dlogs.dir=/root/logs \
+       -XX:+PrintGCDateStamps \
        -Xloggc:/root/logs/gc.log \
+       -XX:+PrintTenuringDistribution \
+       -XX:NewRatio=2 \
+       -XX:SurvivorRatio=8 \
        /root/dists/mesh-agent.jar
 elif [[ "$1" == "provider-large" ]]; then
   echo "Starting large provider agent..."
@@ -55,6 +67,10 @@ elif [[ "$1" == "provider-large" ]]; then
        -Detcd.url=$ETCD_URL \
        -XX:+PrintGCDetails \
        -Dlogs.dir=/root/logs \
+       -XX:+PrintGCDateStamps \
+       -XX:+PrintTenuringDistribution \
+       -XX:NewRatio=2 \
+       -XX:SurvivorRatio=8 \
        -Xloggc:/root/logs/gc.log \
        /root/dists/mesh-agent.jar
 else
